# Workmate_test

./: .coverage  README.md  main.py  pyproject.toml
src/: main.py
tests/: tests.py
tests/data/: empty_employees.csv  missing_column.csv
