[project]
name = "workmate-test"
version = "0.1.0"
description = "csv processing script"
authors = [
    {name = "Sirotko Maksim"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pytest (>=9.0.1,<10.0.0)",
    "ruff (>=0.14.6,<0.15.0)",
    "tabulate (>=0.9.0,<0.10.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
